version/0.37/_sources/api/solver/_autosummary/settings/phase_21_child.rst.txt
:orphan:

.. _phase_21_child:

phase_child
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.phase_21_child
    :show-inheritance:

.. rubric:: Attributes

========================================   ==========================================================

Attribute                                                                                     Summary

========================================   ==========================================================
:ref:`radiator <radiator_1>`                   Allows to change radiator model variables or settings.

:ref:`discrete_phase <discrete_phase_2>`                                     Discrete Phase settings.

:ref:`geometry <geometry_6>`                   Allows to change geometry model variables or settings.

========================================   ==========================================================

.. rubric:: Included in:

==========================   ======================================

Parent                                                      Summary

==========================   ======================================
:ref:`phase_21 <phase_21>`       Domain name to define settings on.

==========================   ======================================

