version/0.39/_sources/api/solver/_autosummary/settings/phase_21_child.rst.txt
:orphan:

.. _phase_21_child:

phase_child
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.phase_21_child
    :show-inheritance:

.. rubric:: Attributes

========================================   ============================================================

Attribute                                                                                       Summary

========================================   ============================================================
:ref:`momentum <momentum_9>`                     Allows to change momentum model variables or settings.

:ref:`turbulence <turbulence>`                 Allows to change turbulence model variables or settings.

:ref:`thermal <thermal>`                          Allows to change thermal model variables or settings.

:ref:`radiation <radiation_1>`                          Radiation settings for this boundary-condition.

:ref:`species <species_6>`                        Allows to change species model variables or settings.

:ref:`discrete_phase <discrete_phase_1>`              Allows to change DPM model variables or settings.

:ref:`multiphase <multiphase_3>`                                                   Multiphase settings.

:ref:`potential <potential>`                    Allows to change potential model variables or settings.

:ref:`structure <structure_1>`                  Allows to change structure model variables or settings.

:ref:`uds <uds>`                                      Allows to change UDS model variables or settings.

:ref:`icing <icing>`                                Allows to change icing model variables or settings.

:ref:`geometry <geometry_7>`                     Allows to change geometry model variables or settings.

========================================   ============================================================

.. rubric:: Included in:

==========================   ======================================

Parent                                                      Summary

==========================   ======================================
:ref:`phase_21 <phase_21>`       Domain name to define settings on.

==========================   ======================================

